--- a/views/employees/employees.ejs
+++ b/views/employees/employees.ejs
@@ -48,7 +48,10 @@
             </div>
             <div class="modal-footer">
                 <button type="button" id="closeBtn" class="btn btn-outline-inventory" data-dismiss="modal">Close</button>
-                <button type="button" id="updateBtn" class="btn btn-outline-inventory">Update</button>
+                <button type="button" id="updateBtn" class="btn btn-outline-inventory">
+                    <span id="btn-label-modal">Update</span>
+                    <span id="btnSpinner-modal" class="spinner-border spinner-border-sm d-none" role="status" aria-hidden="true"></span>
+                </button>
             </div>
         </div>
     </div>
@@ -144,8 +147,8 @@
                         <div class="row d-flex justify-content-end">
                             <div class="col-md-2 align mt-2">
                                 <button id="addBtn" name="addBtn" class="btn btn-sm btn-outline-inventory w-100">
-                                    <i class="fa fa-plus" aria-hidden="true"></i>
-                                    ADD
+                                    <span id="btnIcon"><i class="fa fa-plus" aria-hidden="true"></i> Add</span>
+                                    <span id="btnSpinner" class="spinner-border spinner-border-sm d-none" role="status" aria-hidden="true"></span>
                                 </button>
                             </div>
                         </div>
