--- a/views/position/position.ejs
+++ b/views/position/position.ejs
@@ -21,13 +21,13 @@
                             </div>
                             <div class="col-md-6">
                                 <label class="form-label" for="mu_password">Current Position Name</label>
-                                <input autocomplete="off" id="currentPositionName" name="currentPositionName" type="text" class="form-control" placeholder="Enter new Access name" aria-label="fullname" aria-describedby="basic-addon1" disabled>        
+                                <input autocomplete="off" id="currentPositionName" name="currentPositionName" type="text" class="form-control" placeholder="Enter new Position name" aria-label="fullname" aria-describedby="basic-addon1" disabled>        
                             </div>
                         </div>
                         <div class="row mb-2 justify-content-center">
                             <div class="col-md-6">
                                 <label class="form-label" for="mu_password">New Position Name</label>
-                                <input autocomplete="off" id="positionnamemodal" name="positionnamemodal" type="text" class="form-control" placeholder="Enter new Access name" aria-label="fullname" aria-describedby="basic-addon1">        
+                                <input autocomplete="off" id="positionnamemodal" name="positionnamemodal" type="text" class="form-control" placeholder="Enter new Position name" aria-label="fullname" aria-describedby="basic-addon1">        
                             </div>
                         </div>
                     </div>
@@ -35,7 +35,10 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-outline-inventory" data-dismiss="modal">Close</button>
-                <button type="button" id="updateBtn" class="btn btn-outline-inventory">Update</button>
+                <button type="button" id="updateBtn" class="btn btn-outline-inventory">
+                    <span id="btn-label-modal">Update</span>
+                    <span id="btnSpinner-modal" class="spinner-border spinner-border-sm d-none" role="status" aria-hidden="true"></span>
+                </button>
             </div>
         </div>
     </div>
@@ -62,9 +65,9 @@
                         </div>
                         <div class="col-md-3 md-text-right">
                             <button id="addBtn" name="addBtn" class="btn btn-outline-inventory w-50">
-                                <i class="fa fa-plus" aria-hidden="true"></i>
-                                Add
-                            </button> 
+                                <span id="btnIcon"><i class="fa fa-plus" aria-hidden="true"></i> Add</span>
+                                <span id="btnSpinner" class="spinner-border spinner-border-sm d-none" role="status" aria-hidden="true"></span>
+                            </button>
                         </div>
                     </div>
                 </div>      
